[project]
name = "ivcap-python-ai-tool-template"
version = "0.2.0"
description = "AI tool to help determining if a number is a prime number."
authors = [
    {name = "Max Ott",email = "max.ott@data61.csiro.au"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ivcap-ai-tool (>=0.7.2,<0.8.0)",
    "pydantic (>=2.11.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
